[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zana-axial"
version = "0.1.0"
description = "ZANA Axial — monolithic CLI agent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
full = ["numpy", "pandas", "matplotlib"]

[project.scripts]
zana = "zana_axial.cli:main"
