[metadata]
name = vortex-ai
version = 1.0.0
description = Vortex AI agent framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Vortex Maintainers
author_email = maintainers@example.com
license = MIT
license_files = LICENSE
url = https://github.com/example/vortex
project_urls =
    Documentation = https://github.com/example/vortex/tree/main/docs
    Source = https://github.com/example/vortex
    Issues = https://github.com/example/vortex/issues
keywords = ai,agents,cli,async,workflow
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    typer>=0.9
    rich>=13.5
    pydantic>=2.5
    pyyaml>=6.0
    sqlalchemy>=2.0
    httpx>=0.24
    aiosqlite>=0.18
    python-dotenv>=1.0
    cryptography>=41.0
    uvloop>=0.17; platform_system != "Windows"
    orjson>=3.9
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include = vortex*
where = .

[options.entry_points]
console_scripts =
    vortex = vortex.cli.app:main

[flake8]
max-line-length = 100
extend-ignore = E203,W503
select = E,F,W,B

[isort]
profile = black
line_length = 100
known_first_party = vortex
combine_as_imports = True

[tool:pytest]
addopts = --cov=vortex --cov-report=term-missing --cov-fail-under=90 -ra
minversion = 7.0

[mypy]
python_version = 3.11
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
